ui-tests/tests/ui/net_without_tcp_missing_tcp.rs
use ui_tests::tokio_net::tcp;

fn main() {}

